force-app/main/default/objects/Product2/fields/CWS_NetSuite_Product_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetSuite_Product_Sync_Status__c</fullName>
    <defaultValue>&apos;New&apos;</defaultValue>
    <description>Product Sync status fields for netsuite : - Pick list field having values New,Not synced, Synced, Error.</description>
    <inlineHelpText>Indicates if the product is synced to NetSuite</inlineHelpText>
    <label>NetSuite Product Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Not Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>