force-app/main/default/objects/Product2/fields/CWS_New_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_New_Product_Type__c</fullName>
    <label>New Product Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>