force-app/main/default/objects/Product2/fields/CWS_No_Bookings_Previous_5Yrs__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_Bookings_Previous_5Yrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Bookings Previous 5Yrs</label>
    <type>Checkbox</type>
</CustomField>