force-app/main/default/objects/Product2/fields/CWS_Non3rd_party_Billing_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Non3rd_party_Billing_SKU__c</fullName>
    <label>Non-3rd party Billing SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>