force-app/main/default/objects/Product2/fields/CWS_Normal_Included_Units__c.field-meta.xml
<CustomField>
    <fullName>CWS_Normal_Included_Units__c</fullName>
    <label>Normal Included Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>