force-app/main/default/objects/Product2/fields/CWS_Notes__c.field-meta.xml
<CustomField>
    <fullName>CWS_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>