force-app/main/default/objects/Product2/fields/CWS_Number_Of_Tiers__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_Of_Tiers__c</fullName>
    <label>Number Of Tiers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>