force-app/main/default/objects/Product2/fields/CWS_Perpetual_Only_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Perpetual_Only_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perpetual Only SKU</label>
    <type>Checkbox</type>
</CustomField>