force-app/main/default/objects/Product2/fields/CWS_Precision_Measure__c.field-meta.xml
<CustomField>
    <fullName>CWS_Precision_Measure__c</fullName>
    <label>Precision Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>