force-app/main/default/objects/Product2/fields/CWS_Product_Available_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Available_for_Integration__c</fullName>
    <description>Product Available for Integration</description>
    <formula>AND(
IsActive,
NOT(ISBLANK(CWS_ProductCode__c)), 
NOT(ISBLANK(TEXT(CWS_ChargeType__c))),
NOT(ISBLANK(TEXT(CWS_Sub_Category__c))),
NOT(ISBLANK(TEXT(CWS_License_Type__c)))		
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Available for Integration</inlineHelpText>
    <label>Product Available for Integration</label>
    <type>Checkbox</type>
</CustomField>