force-app/main/default/objects/Product2/fields/CWS_Product_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Dependencies__c</fullName>
    <inlineHelpText>Indicates product dependencies</inlineHelpText>
    <label>Product Dependencies</label>
    <type>TextArea</type>
</CustomField>