force-app/main/default/objects/Product2/fields/CWS_Product_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Exclusions__c</fullName>
    <description>Used in pre-pipeline estimator</description>
    <inlineHelpText>Choose all the products that cannot be quoted with this product.  This limits selections in the Pre-pipeline estimator.</inlineHelpText>
    <label>Product Exclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Product_Interest</valueSetName>
    </valueSet>
</CustomField>