force-app/main/default/objects/Product2/fields/CWS_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Family__c</fullName>
    <inlineHelpText>Indicates Product Family of the product</inlineHelpText>
    <label>Product Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Product_Family</valueSetName>
    </valueSet>
</CustomField>