force-app/main/default/objects/Product2/fields/CWS_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Line__c</fullName>
    <description>Used for Netsuite integration</description>
    <inlineHelpText>Used for Netsuite integration</inlineHelpText>
    <label>Product Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>BDR : BDR - Other</fullName>
            </value>
            <value>
                <fullName>BDR : Recover</fullName>
            </value>
            <value>
                <fullName>BDR : Solution Partners</fullName>
            </value>
            <value>
                <fullName>Business Automation</fullName>
            </value>
            <value>
                <fullName>Business Automation : BrightGauge</fullName>
            </value>
            <value>
                <fullName>Business Automation : Business Automation - Other</fullName>
            </value>
            <value>
                <fullName>Business Automation : Business Management Packages</fullName>
            </value>
            <value>
                <fullName>Business Automation : Engage</fullName>
            </value>
            <value>
                <fullName>Business Automation : ITBoost</fullName>
            </value>
            <value>
                <fullName>Business Automation : Manage</fullName>
            </value>
            <value>
                <fullName>Business Automation : Sell</fullName>
            </value>
            <value>
                <fullName>Business Automation : Service Leadership</fullName>
            </value>
            <value>
                <fullName>Business Automation : Service Leadership - Peer Groups</fullName>
                <isActive>false</isActive>
                <label>Business Automation : Service Leadership - Peer Groups</label>
            </value>
            <value>
                <fullName>Business Automation : Smileback</fullName>
            </value>
            <value>
                <fullName>Business Automation : Solution Partners</fullName>
            </value>
            <value>
                <fullName>Business Automation : Unite (fka CloudConsole)</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Cybersecurity - Other</fullName>
                <isActive>false</isActive>
                <label>Cybersecurity : Cybersecurity - Other</label>
            </value>
            <value>
                <fullName>Cybersecurity : EDR – ConnectWise</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Endpoint Policy Mgmt</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Fortify</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Identify</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Incident Response Service</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Legacy Security Mgmt</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Managed SIEM</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : MDR – Bitdefender</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : MDR – SentinelOne</fullName>
            </value>
            <value>
                <fullName>Cybersecurity : Network Sensor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>