force-app/main/default/objects/Product2/fields/CWS_Product_Parent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Parent__c</fullName>
    <label>Product Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>