force-app/main/default/objects/Product2/fields/CWS_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProductCode__c</fullName>
    <description>Unique Field created for the Product Code.</description>
    <externalId>true</externalId>
    <inlineHelpText>Captures the unique identifier for the product</inlineHelpText>
    <label>Product Code</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>