force-app/main/default/objects/Product2/fields/CWS_Provisioning_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Provisioning_Eligibility__c</fullName>
    <inlineHelpText>Indicates if a product needs provisioning or not and if it is manually or automatically provisioned</inlineHelpText>
    <label>Provisioning Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Provisioning_Eligibility</valueSetName>
    </valueSet>
</CustomField>