force-app/main/default/objects/Product2/fields/CWS_Ramp_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ramp_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if a product is eligible for Ramp</inlineHelpText>
    <label>Ramp Eligible</label>
    <type>Checkbox</type>
</CustomField>