force-app/main/default/objects/Product2/fields/CWS_RatePLan_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_RatePLan_Description__c</fullName>
    <description>RatePlan Description is created for Integration purposes</description>
    <label>RatePLan Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>