force-app/main/default/objects/Product2/fields/CWS_RatePlanChargeDescription__c.field-meta.xml
<CustomField>
    <fullName>CWS_RatePlanChargeDescription__c</fullName>
    <description>This field is created for integration purpose</description>
    <inlineHelpText>Captures the legacy rate plan charge description for the product</inlineHelpText>
    <label>RatePlanChargeDescription</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>