force-app/main/default/objects/Product2/fields/CWS_Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Type__c</fullName>
    <inlineHelpText>Indicates if the product is an Opt-In or Opt-Out product</inlineHelpText>
    <label>Renewal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-out</fullName>
            </value>
            <value>
                <fullName>Opt-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>