force-app/main/default/objects/Product2/fields/CWS_Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Uplift__c</fullName>
    <inlineHelpText>Indicates  applicable uplift % at the time of renewal</inlineHelpText>
    <label>Renewal Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>