force-app/main/default/objects/Product2/fields/CWS_Reseller_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reseller_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller Eligibility</label>
    <type>Checkbox</type>
</CustomField>