force-app/main/default/objects/Product2/fields/CWS_Rev_Rec_Pattern__c.field-meta.xml
<CustomField>
    <fullName>CWS_Rev_Rec_Pattern__c</fullName>
    <label>Rev Rec Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>