force-app/main/default/objects/Product2/fields/CWS_Revenue_Recognition_Rule__c.field-meta.xml
<CustomField>
    <fullName>CWS_Revenue_Recognition_Rule__c</fullName>
    <label>Revenue Recognition Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Revenue_Recognition_Rule</valueSetName>
    </valueSet>
</CustomField>