force-app/main/default/objects/Product2/fields/CWS_RevRec_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>CWS_RevRec_Term_Length__c</fullName>
    <label>RevRec Term Length</label>
    <length>55</length>
    <type>Text</type>
</CustomField>