force-app/main/default/objects/Product2/fields/CWS_Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>CWS_Route_to_Market__c</fullName>
    <inlineHelpText>Indicates the applicable Route to Market for the product</inlineHelpText>
    <label>Route to Market</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Marketplace Only</fullName>
            </value>
            <value>
                <fullName>IIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>