force-app/main/default/objects/Product2/fields/CWS_Route_to_Market_Billing_Only__c.field-meta.xml
<CustomField>
    <fullName>CWS_Route_to_Market_Billing_Only__c</fullName>
    <inlineHelpText>Indicates Route to Market where a Active/Billing Only product behaves as a Billing Only product</inlineHelpText>
    <label>Route to Market Billing Only</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IIT</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Marketplace Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>