force-app/main/default/objects/Product2/fields/CWS_Sell_Max_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sell_Max_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Max Product which can be sold for the Sell Products</description>
    <label>Sell Max Product</label>
    <type>Checkbox</type>
</CustomField>