force-app/main/default/objects/Product2/fields/CWS_Sell_Min_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sell_Min_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked to trigger approval if the product is reduced than the default quantity mentioned.</description>
    <label>Sell Min Product</label>
    <type>Checkbox</type>
</CustomField>