force-app/main/default/objects/Product2/fields/CWS_Service_SOW_Link__c.field-meta.xml
<CustomField>
    <fullName>CWS_Service_SOW_Link__c</fullName>
    <inlineHelpText>Indicates if product is a task-based or not and if it requires Standard SOW or Custom SOW</inlineHelpText>
    <label>Service SOW Link</label>
    <type>Url</type>
</CustomField>