force-app/main/default/objects/Product2/fields/CWS_Show_CMS_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_Show_CMS_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show CMS Description</label>
    <type>Checkbox</type>
</CustomField>