force-app/main/default/objects/Product2/fields/CWS_Show_CMS_Units__c.field-meta.xml
<CustomField>
    <fullName>CWS_Show_CMS_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show CMS Units</label>
    <type>Checkbox</type>
</CustomField>