force-app/main/default/objects/Product2/fields/CWS_SKU_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_SKU_Type__c</fullName>
    <inlineHelpText>Indicates the SKU Type of the product</inlineHelpText>
    <label>SKU Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_SKU_TYPE</valueSetName>
    </valueSet>
</CustomField>