force-app/main/default/objects/Product2/fields/CWS_Source__c.field-meta.xml
<CustomField>
    <fullName>CWS_Source__c</fullName>
    <description>to differenciate the CT and CW  products</description>
    <inlineHelpText>Indicates if the product is legacy CMS, CW or R1Soft product</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CW</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>R1Soft</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>