force-app/main/default/objects/Product2/fields/CWS_Start_and_end_date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Start_and_end_date__c</fullName>
    <label>Start and end date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>