force-app/main/default/objects/Product2/fields/CWS_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Status__c</fullName>
    <inlineHelpText>Indicates the Status of the product</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Status</valueSetName>
    </valueSet>
</CustomField>