force-app/main/default/objects/Product2/fields/CWS_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Status_Type__c</fullName>
    <label>Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive SKU</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>ACTIVE MARKETPLACE ONLY</fullName>
            </value>
            <value>
                <fullName>BILLING ONLY - NO NEW SALES</fullName>
            </value>
            <value>
                <fullName>LEGACY CONVERTED SKU</fullName>
            </value>
            <value>
                <fullName>INACTIVE\FINANCE SKU</fullName>
            </value>
            <value>
                <fullName>BILLING ONLY</fullName>
            </value>
            <value>
                <fullName>ACTIVE\BILLING ONLY</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>