force-app/main/default/objects/Product2/fields/CWS_Stepped_Payment_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Stepped_Payment_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stepped Payment Eligibility</label>
    <type>Checkbox</type>
</CustomField>