force-app/main/default/objects/Product2/fields/CWS_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sub_Category__c</fullName>
    <inlineHelpText>Indicates the Sub Category of the product</inlineHelpText>
    <label>Sub Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Sub_Category</valueSetName>
    </valueSet>
</CustomField>