force-app/main/default/objects/Product2/fields/CWS_Tier_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Tier_Amount__c</fullName>
    <label>Tier Amount</label>
    <length>30</length>
    <type>Text</type>
</CustomField>