force-app/main/default/objects/Product2/fields/CWS_Tiernum__c.field-meta.xml
<CustomField>
    <fullName>CWS_Tiernum__c</fullName>
    <label>Tiernum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>