force-app/main/default/objects/Product2/fields/CWS_True_Up_Charge__c.field-meta.xml
<CustomField>
    <fullName>CWS_True_Up_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Captures True Up Charge for this product. Used in Min Commit ($ based) Workflow ($ based)</inlineHelpText>
    <label>True Up Charge</label>
    <type>Checkbox</type>
</CustomField>