force-app/main/default/objects/Product2/fields/CWS_True_Up_Charge_Level__c.field-meta.xml
<CustomField>
    <fullName>CWS_True_Up_Charge_Level__c</fullName>
    <inlineHelpText>Captures True Up Charge Level for this product. Used in Min Commit ($ based) Workflow ($ based) in Zuora</inlineHelpText>
    <label>True Up Charge Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>