force-app/main/default/objects/Product2/fields/CWS_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Type</valueSetName>
    </valueSet>
</CustomField>