force-app/main/default/objects/Product2/fields/CWS_UOM__c.field-meta.xml
<CustomField>
    <fullName>CWS_UOM__c</fullName>
    <inlineHelpText>Indicates Unit of Measure for the product</inlineHelpText>
    <label>Unit of Measure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_UOM_valueset</valueSetName>
    </valueSet>
</CustomField>