force-app/main/default/objects/Product2/fields/CWS_Used_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>CWS_Used_for_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for  Renewal</label>
    <type>Checkbox</type>
</CustomField>