force-app/main/default/objects/Product2/fields/CWS_Vendor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Vendor__c</fullName>
    <inlineHelpText>Indicates the Vendor of the product</inlineHelpText>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>