force-app/main/default/objects/Product2/fields/CWS_Vendor_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Vendor_SKU__c</fullName>
    <inlineHelpText>Indicates the Vendor SKU of the product</inlineHelpText>
    <label>Vendor SKU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>