force-app/main/default/objects/Product2/fields/CWS_Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Vendor_Type__c</fullName>
    <inlineHelpText>Indicates the Vendor Type of the product</inlineHelpText>
    <label>Vendor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>