force-app/main/default/objects/Product2/fields/CWS_Zuora_Last_Synced_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Zuora_Last_Synced_Date__c</fullName>
    <description>Field to be stamped with date and timestamp based on successful syncing with Netsuite and Zuora.</description>
    <inlineHelpText>Indicates the last time the product was Synced to Zuora</inlineHelpText>
    <label>Zuora Last Synced Date</label>
    <type>DateTime</type>
</CustomField>