force-app/main/default/objects/Product2/fields/CWS_Zuora_Product_Available__c.field-meta.xml
<CustomField>
    <fullName>CWS_Zuora_Product_Available__c</fullName>
    <description>Product Available for Integration</description>
    <formula>AND(
IsActive,
NOT(ISBLANK(CWS_ProductCode__c)), 
NOT(ISBLANK(TEXT(CWS_ChargeType__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the product is ready to be integrated with Zuora after all required fields are populated</inlineHelpText>
    <label>Zuora Product Available</label>
    <type>Checkbox</type>
</CustomField>