force-app/main/default/objects/Product2/fields/CWS_ZUORA_PRODUCT_NAME__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZUORA_PRODUCT_NAME__c</fullName>
    <inlineHelpText>Captures legacy product name</inlineHelpText>
    <label>ZUORA PRODUCT NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>