force-app/main/default/objects/Product2/fields/CWS_ZuoraChargeIdRecurring__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraChargeIdRecurring__c</fullName>
    <description>Zuora Recurring Rate Plan Charge Id</description>
    <inlineHelpText>Captures the Zuora rate plan charge id</inlineHelpText>
    <label>ZuoraChargeIdRecurring</label>
    <length>50</length>
    <type>Text</type>
</CustomField>