force-app/main/default/objects/Product2/fields/CWS_ZuoraChargeIdUsage__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraChargeIdUsage__c</fullName>
    <description>Zuora Usage Rate Plan Charge Id</description>
    <inlineHelpText>Captures the Zuora rate plan charge id</inlineHelpText>
    <label>ZuoraChargeIdUsage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>