force-app/main/default/objects/Product2/fields/CWS_zuorachargeIdUsageMinCommitOverageId__c.field-meta.xml
<CustomField>
    <fullName>CWS_zuorachargeIdUsageMinCommitOverageId__c</fullName>
    <label>zuorachargeIdUsageMinCommitOverageId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>