force-app/main/default/objects/Product2/fields/CWS_ZuoraProductId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraProductId__c</fullName>
    <description>Zuora Product Id</description>
    <inlineHelpText>Captures the Zuora Product Id</inlineHelpText>
    <label>ZuoraProductId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>