force-app/main/default/objects/Product2/fields/CWS_ZuoraRatePlanChargeId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraRatePlanChargeId__c</fullName>
    <description>Zuora Rate Plan Charge Id</description>
    <inlineHelpText>Zuora Rate Plan Charge Id</inlineHelpText>
    <label>ZuoraRatePlanChargeId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>