force-app/main/default/objects/Product2/fields/CWS_ZuoraRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraRatePlanId__c</fullName>
    <description>Zuora Rate Plan Id</description>
    <inlineHelpText>Captures the Zuora rate plan id</inlineHelpText>
    <label>ZuoraRatePlanId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>