force-app/main/default/objects/Product2/fields/SBQQ__Component__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this product as a component, excluding it from selection in product lookup.</description>
    <inlineHelpText>Indicates if the product can be added to the quote as a standalone or not. If True, the product cannot be added to the quote as a standalone</inlineHelpText>
    <label>Component</label>
    <type>Checkbox</type>
</CustomField>