force-app/main/default/objects/Product2/fields/SBQQ__ConfigurationEvent__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConfigurationEvent__c</fullName>
    <description>Specifies when user is prompted to configure this product.</description>
    <inlineHelpText>Indicates when configure products screen shows up for the product</inlineHelpText>
    <label>Configuration Event</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__ConfigurationType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>